feat: mejora de logica